==> ElluIFX/ANO_PioneerPro-T1/SRC/drivers/Drv_icm20602.c <==
#include "Drv_icm20602.h"
#include "Ano_Filter.h"
#include "Ano_Math.h"
#include "Drv_spi.h"
#include "Drv_led.h"
#include "Drv_heating.h"

void Drv_Icm20602CSPin_Init(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;
	
	RCC_AHB1PeriphClockCmd(ICM20602_CS_RCC, ENABLE);
	
	GPIO_InitStructure.GPIO_Pin = ICM20602_CS_PIN;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
    GPIO_Init(ICM20602_CS_GPIO, &GPIO_InitStructure);
	
	GPIO_SetBits(ICM20602_CS_GPIO, ICM20602_CS_PIN);
}

static void icm20602_enable(u8 ena)
{
	if(ena)
		GPIO_ResetBits(ICM20602_CS_GPIO, ICM20602_CS_PIN);
	else
		GPIO_SetBits(ICM20602_CS_GPIO, ICM20602_CS_PIN);
}

void MPU6050_Data_Offset()
{
	static u8 off_cnt;

	
	if(sensor.gyr_CALIBRATE || sensor.acc_CALIBRATE || sensor.acc_z_auto_CALIBRATE)
	{	



///////////////////复位校准值///////////////////////////		
		if(flag.motionless == 0 || sensor_val[A_Z]<1000 || (flag.mems_temperature_ok == 0))
		{
				gyro_sum_cnt = 0;
				acc_sum_cnt=0;
				acc_z_auto_cnt = 0;
				
				for(u8 j=0;j<3;j++)
				{
					acc_auto_sum_temp[j] = sum_temp[G_X+j] = sum_temp[A_X+j] = 0;
				}
				sum_temp[TEM] = 0;
		}

		

		
///////////////////////////////////////////////////////////
		off_cnt++;			
		if(off_cnt>=10)
		{	
			off_cnt=0;

			
			
			if(sensor.gyr_CALIBRATE)
			{
				LED_STA.calGyr = 1;
				gyro_sum_cnt++;
				
				for(u8 i = 0;i<3;i++)
				{
					sum_temp[G_X+i] += sensor.Gyro_Original[i];
				}
				if( gyro_sum_cnt >= OFFSET_AV_NUM )
				{
					for(u8 i = 0;i<3;i++)
					{
						save.gyro_offset[i] = (float)sum_temp[G_X+i]/OFFSET_AV_NUM;
						
						sum_temp[G_X + i] = 0;
					}
					gyro_sum_cnt =0;
					if(sensor.gyr_CALIBRATE == 1)
					{
						if(sensor.acc_CALIBRATE == 0)
						{
							data_save();
						}
					}
					sensor.gyr_CALIBRATE = 0;
					ANO_DT_SendString("GYR init OK!");
					LED_STA.calGyr = 0;
				}
			}
			
			if(sensor.acc_CALIBRATE == 1)
			{
				LED_STA.calAcc = 1;
				acc_sum_cnt++;
				
				sum_temp[A_X] += sensor_val_rot[A_X];
				sum_temp[A_Y] += sensor_val_rot[A_Y];
				sum_temp[A_Z] += sensor_val_rot[A_Z] - G_1G;// - 65535/16;   // +-8G
				sum_temp[TEM] += sensor.Tempreature;

				if( acc_sum_cnt >= OFFSET_AV_NUM )
				{
					for(u8 i=0 ;i<3;i++)
					{
						save.acc_offset[i] = sum_temp[A_X+i]/OFFSET_AV_NUM;
						
						sum_temp[A_X + i] = 0;
					}

					acc_sum_cnt =0;
					sensor.acc_CALIBRATE = 0;
					ANO_DT_SendString("ACC init OK!");
					LED_STA.calAcc = 0;
					data_save();
				}	
			}
		}
	}
}
