==> simonsmh/UAV-fc/Drive/Src/Drv_icm20602.c <==
#include "Drv_icm20602.h"
#include "DY_Filter.h"
#include "DY_Math.h"
#include "Drv_spi.h"
#include "Drv_led.h"

void Drv_Icm20602CSPin_Init(void)
{
    MAP_SysCtlPeripheralEnable(ICM20602_CS_SYSCTL);
    while(!(MAP_SysCtlPeripheralReady(ICM20602_CS_SYSCTL)))
    {
    }
    
    GPIOPinTypeGPIOOutput(ICM20602_CS_GPIO, ICM20602_CS_PIN);
    
    GPIOPinWrite(ICM20602_CS_GPIO, ICM20602_CS_PIN, ICM20602_CS_PIN);
}

static void icm20602_enable(u8 ena)
{
    if(ena)
	GPIOPinWrite(ICM20602_CS_GPIO, ICM20602_CS_PIN, ~ICM20602_CS_PIN);
    else
	GPIOPinWrite(ICM20602_CS_GPIO, ICM20602_CS_PIN, ICM20602_CS_PIN);
}

void MPU6050_Data_Offset()
{
	static u8 off_cnt;
	u8 i = 0;
	u8 j = 0;
	if(sensor.gyr_CALIBRATE || sensor.acc_CALIBRATE || sensor.acc_z_auto_CALIBRATE)
	{
        ///////////////////复位校准值///////////////////////////
		if(flag.motionless == 0 || sensor_val[A_Z]<1000)
		{
				gyro_sum_cnt = 0;
				acc_sum_cnt=0;
				acc_z_auto_cnt = 0;

				for(j = 0; j < 3; j ++)
				{
					acc_auto_sum_temp[j] = sum_temp[G_X+j] = sum_temp[A_X+j] = 0;
				}
				sum_temp[TEM] = 0;
		}
        ///////////////////////////////////////////////////////////
		off_cnt++;
		if(off_cnt>=10)
		{
			off_cnt=0;
            
			if(sensor.gyr_CALIBRATE)
			{
				LED_state = 2;
				gyro_sum_cnt++;

				for(i = 0;i<3;i++)
				{
					sum_temp[G_X+i] += sensor.Gyro_Original[i];
				}
				if( gyro_sum_cnt >= OFFSET_AV_NUM )
				{
					for(i = 0;i<3;i++)
					{
						save.gyro_offset[i] = (float)sum_temp[G_X+i]/OFFSET_AV_NUM;

						sum_temp[G_X + i] = 0;
					}
					gyro_sum_cnt =0;
					if(sensor.gyr_CALIBRATE == 1)
					{
						if(sensor.acc_CALIBRATE == 0)
						{
							data_save();
						}
					}
					sensor.gyr_CALIBRATE = 0;
					DY_DT_SendString("GYR init OK!",sizeof("GYR init OK!"));
				}
			}

			if(sensor.acc_CALIBRATE == 1)
			{
				LED_state = 3;
				acc_sum_cnt++;

				sum_temp[A_X] += sensor_val_rot[A_X];
				sum_temp[A_Y] += sensor_val_rot[A_Y];
				sum_temp[A_Z] += sensor_val_rot[A_Z] - G_1G;// - 65535/16;   // +-8G
				sum_temp[TEM] += sensor.Tempreature;

				if( acc_sum_cnt >= OFFSET_AV_NUM )
				{
					for(i = 0 ; i < 3; i++)
					{
						save.acc_offset[i] = sum_temp[A_X+i]/OFFSET_AV_NUM;

						sum_temp[A_X + i] = 0;
					}

					acc_sum_cnt =0;
					sensor.acc_CALIBRATE = 0;
					DY_DT_SendString("ACC init OK!",sizeof("ACC init OK!"));
					data_save();
				}
			}
		}
	}
}
